base/01-resources/003-chat/03-turn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn
  #namespace: turn
  namespace: cert-manager
spec:
  selector:
    matchLabels:
      app: coturn
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: coturn
    spec:
      hostNetwork: true
      containers:
        - image: dexxter1911/dynamic-coturn:latest
          name: turn
          volumeMounts:
            - name: cert
              mountPath: /var/run/secret
              readOnly: true
            - name: conf
              mountPath: /etc/coturn.conf
              subPath: coturn.conf
      volumes:
        - name: cert
          secret:
            secretName: example-tld-cert #TODO
        - name: conf
          configMap:
            name: coturn-conf
            items:
              - key: coturn.conf
                path: coturn.conf
