base/01-resources/003-chat/03-turn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coturn-ingress
  namespace: cert-manager
  labels:
    environment: extern
    app: coturn
spec:
  tls:
    - hosts:
        - turn.example.tld
  rules:
    - host: turn.example.tld
  #     http:
  #       paths:
  #         - pathType: Prefix
  #           path: /
  #           backend:
  #             service:
  #               name: grafana-service
  #               port:
  #                 number: 8111
